create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1074,15 +1074,15 @@ a {
     left: -1rem;
   }
 }
-.cid-tpEMzEaRPx {
+.cid-tq4nXOQb96 {
   padding-top: 15px;
   padding-bottom: 0px;
   background-color: #ffffff;
 }
-.cid-tpEMzEaRPx .mbr-fallback-image.disabled {
+.cid-tq4nXOQb96 .mbr-fallback-image.disabled {
   display: none;
 }
-.cid-tpEMzEaRPx .mbr-fallback-image {
+.cid-tq4nXOQb96 .mbr-fallback-image {
   display: block;
   background-size: cover;
   background-position: center center;
@@ -1091,18 +1091,18 @@ a {
   position: absolute;
   top: 0;
 }
-.cid-tpEMzEaRPx .media-container-row {
+.cid-tq4nXOQb96 .media-container-row {
   justify-content: space-between;
 }
-.cid-tpEMzEaRPx .text-content {
+.cid-tq4nXOQb96 .text-content {
   max-width: 50%;
 }
 @media (max-width: 768px) {
-  .cid-tpEMzEaRPx .text-content {
+  .cid-tq4nXOQb96 .text-content {
     max-width: none;
   }
 }
-.cid-tpEMzEaRPx .mbr-iconfont-social {
+.cid-tq4nXOQb96 .mbr-iconfont-social {
   margin: 0.5rem;
   font-size: 32px;
   display: flex;
@@ -1114,22 +1114,22 @@ a {
   align-content: center;
   transition: all 0.3s;
 }
-.cid-tpEMzEaRPx .mbr-iconfont-social:before {
+.cid-tq4nXOQb96 .mbr-iconfont-social:before {
   padding: 0.6rem;
 }
-.cid-tpEMzEaRPx .mbr-iconfont-social:hover {
+.cid-tq4nXOQb96 .mbr-iconfont-social:hover {
   background-color: #6592e6;
   color: #ffffff;
 }
 @media (max-width: 768px) {
-  .cid-tpEMzEaRPx .icons {
+  .cid-tq4nXOQb96 .icons {
     justify-content: center !important;
   }
-  .cid-tpEMzEaRPx .text-content * {
+  .cid-tq4nXOQb96 .text-content * {
     text-align: center;
   }
 }
-.cid-tpEMzEaRPx P {
+.cid-tq4nXOQb96 P {
   color: #000000;
   text-align: left;
 }
@@ -5549,57 +5549,6 @@ a {
 .cid-tpGADKUtdE .item-subtitle {
   text-align: center;
 }
-.cid-tpIbEM9Mq8 {
-  padding-top: 1rem;
-  padding-bottom: 0rem;
-  background-color: #ffffff;
-}
-.cid-tpIbEM9Mq8 img,
-.cid-tpIbEM9Mq8 .item-img {
-  width: 100%;
-}
-.cid-tpIbEM9Mq8 .item:focus,
-.cid-tpIbEM9Mq8 span:focus {
-  outline: none;
-}
-.cid-tpIbEM9Mq8 .item {
-  cursor: pointer;
-  margin-bottom: 2rem;
-}
-.cid-tpIbEM9Mq8 .item-wrapper {
-  position: relative;
-  border-radius: 4px;
-  background: #fafafa;
-  height: 100%;
-  display: flex;
-  flex-flow: column nowrap;
-}
-@media (min-width: 992px) {
-  .cid-tpIbEM9Mq8 .item-wrapper .item-content {
-    padding: 2rem;
-  }
-}
-@media (max-width: 991px) {
-  .cid-tpIbEM9Mq8 .item-wrapper .item-content {
-    padding: 1rem;
-  }
-}
-.cid-tpIbEM9Mq8 .mbr-section-btn {
-  margin-top: auto !important;
-}
-.cid-tpIbEM9Mq8 .mbr-section-title {
-  color: #232323;
-}
-.cid-tpIbEM9Mq8 .mbr-text,
-.cid-tpIbEM9Mq8 .mbr-section-btn {
-  text-align: left;
-}
-.cid-tpIbEM9Mq8 .item-title {
-  text-align: center;
-}
-.cid-tpIbEM9Mq8 .item-subtitle {
-  text-align: center;
-}
 .cid-tpIQjHTTml {
   padding-top: 15px;
   padding-bottom: 0px;
@@ -6075,6 +6024,108 @@ a {
 .cid-tpGAQPjEsl .item-subtitle {
   text-align: center;
 }
+.cid-tqilfARQNU {
+  padding-top: 1rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-tqilfARQNU img,
+.cid-tqilfARQNU .item-img {
+  width: 100%;
+}
+.cid-tqilfARQNU .item:focus,
+.cid-tqilfARQNU span:focus {
+  outline: none;
+}
+.cid-tqilfARQNU .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-tqilfARQNU .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #fafafa;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-tqilfARQNU .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tqilfARQNU .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-tqilfARQNU .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-tqilfARQNU .mbr-section-title {
+  color: #232323;
+}
+.cid-tqilfARQNU .mbr-text,
+.cid-tqilfARQNU .mbr-section-btn {
+  text-align: left;
+}
+.cid-tqilfARQNU .item-title {
+  text-align: center;
+}
+.cid-tqilfARQNU .item-subtitle {
+  text-align: center;
+}
+.cid-tqil9ngtcb {
+  padding-top: 1rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-tqil9ngtcb img,
+.cid-tqil9ngtcb .item-img {
+  width: 100%;
+}
+.cid-tqil9ngtcb .item:focus,
+.cid-tqil9ngtcb span:focus {
+  outline: none;
+}
+.cid-tqil9ngtcb .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-tqil9ngtcb .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #fafafa;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-tqil9ngtcb .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tqil9ngtcb .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-tqil9ngtcb .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-tqil9ngtcb .mbr-section-title {
+  color: #232323;
+}
+.cid-tqil9ngtcb .mbr-text,
+.cid-tqil9ngtcb .mbr-section-btn {
+  text-align: left;
+}
+.cid-tqil9ngtcb .item-title {
+  text-align: center;
+}
+.cid-tqil9ngtcb .item-subtitle {
+  text-align: center;
+}
 .cid-tpIQlZvjgP {
   padding-top: 15px;
   padding-bottom: 0px;
@@ -6548,6 +6599,57 @@ a {
   text-align: center;
 }
 .cid-tpGBnB4tmX .item-subtitle {
+  text-align: center;
+}
+.cid-tqio27ufJB {
+  padding-top: 1rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-tqio27ufJB img,
+.cid-tqio27ufJB .item-img {
+  width: 100%;
+}
+.cid-tqio27ufJB .item:focus,
+.cid-tqio27ufJB span:focus {
+  outline: none;
+}
+.cid-tqio27ufJB .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-tqio27ufJB .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #fafafa;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-tqio27ufJB .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tqio27ufJB .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-tqio27ufJB .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-tqio27ufJB .mbr-section-title {
+  color: #232323;
+}
+.cid-tqio27ufJB .mbr-text,
+.cid-tqio27ufJB .mbr-section-btn {
+  text-align: left;
+}
+.cid-tqio27ufJB .item-title {
+  text-align: center;
+}
+.cid-tqio27ufJB .item-subtitle {
   text-align: center;
 }
 .cid-tpIQqLrd7r {
