create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -7127,6 +7127,57 @@ a {
 .cid-tpGBXqm3Sc .item-subtitle {
   text-align: center;
 }
+.cid-tqiAyNkArl {
+  padding-top: 1rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-tqiAyNkArl img,
+.cid-tqiAyNkArl .item-img {
+  width: 100%;
+}
+.cid-tqiAyNkArl .item:focus,
+.cid-tqiAyNkArl span:focus {
+  outline: none;
+}
+.cid-tqiAyNkArl .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-tqiAyNkArl .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #fafafa;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-tqiAyNkArl .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tqiAyNkArl .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-tqiAyNkArl .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-tqiAyNkArl .mbr-section-title {
+  color: #232323;
+}
+.cid-tqiAyNkArl .mbr-text,
+.cid-tqiAyNkArl .mbr-section-btn {
+  text-align: left;
+}
+.cid-tqiAyNkArl .item-title {
+  text-align: center;
+}
+.cid-tqiAyNkArl .item-subtitle {
+  text-align: center;
+}
 .cid-tpIQz0WN03 {
   padding-top: 15px;
   padding-bottom: 0px;
@@ -7602,6 +7653,159 @@ a {
 .cid-tpGCdXMl3i .item-subtitle {
   text-align: center;
 }
+.cid-tqiBE5JeMO {
+  padding-top: 1rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-tqiBE5JeMO img,
+.cid-tqiBE5JeMO .item-img {
+  width: 100%;
+}
+.cid-tqiBE5JeMO .item:focus,
+.cid-tqiBE5JeMO span:focus {
+  outline: none;
+}
+.cid-tqiBE5JeMO .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-tqiBE5JeMO .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #fafafa;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-tqiBE5JeMO .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tqiBE5JeMO .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-tqiBE5JeMO .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-tqiBE5JeMO .mbr-section-title {
+  color: #232323;
+}
+.cid-tqiBE5JeMO .mbr-text,
+.cid-tqiBE5JeMO .mbr-section-btn {
+  text-align: left;
+}
+.cid-tqiBE5JeMO .item-title {
+  text-align: center;
+}
+.cid-tqiBE5JeMO .item-subtitle {
+  text-align: center;
+}
+.cid-tqiBEnJWg1 {
+  padding-top: 1rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-tqiBEnJWg1 img,
+.cid-tqiBEnJWg1 .item-img {
+  width: 100%;
+}
+.cid-tqiBEnJWg1 .item:focus,
+.cid-tqiBEnJWg1 span:focus {
+  outline: none;
+}
+.cid-tqiBEnJWg1 .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-tqiBEnJWg1 .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #fafafa;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-tqiBEnJWg1 .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tqiBEnJWg1 .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-tqiBEnJWg1 .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-tqiBEnJWg1 .mbr-section-title {
+  color: #232323;
+}
+.cid-tqiBEnJWg1 .mbr-text,
+.cid-tqiBEnJWg1 .mbr-section-btn {
+  text-align: left;
+}
+.cid-tqiBEnJWg1 .item-title {
+  text-align: center;
+}
+.cid-tqiBEnJWg1 .item-subtitle {
+  text-align: center;
+}
+.cid-tqiBFPJZBi {
+  padding-top: 1rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-tqiBFPJZBi img,
+.cid-tqiBFPJZBi .item-img {
+  width: 100%;
+}
+.cid-tqiBFPJZBi .item:focus,
+.cid-tqiBFPJZBi span:focus {
+  outline: none;
+}
+.cid-tqiBFPJZBi .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-tqiBFPJZBi .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #fafafa;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-tqiBFPJZBi .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tqiBFPJZBi .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-tqiBFPJZBi .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-tqiBFPJZBi .mbr-section-title {
+  color: #232323;
+}
+.cid-tqiBFPJZBi .mbr-text,
+.cid-tqiBFPJZBi .mbr-section-btn {
+  text-align: left;
+}
+.cid-tqiBFPJZBi .item-title {
+  text-align: center;
+}
+.cid-tqiBFPJZBi .item-subtitle {
+  text-align: center;
+}
 .cid-tpIQC8cfUs {
   padding-top: 15px;
   padding-bottom: 0px;
@@ -8075,6 +8279,210 @@ a {
   text-align: center;
 }
 .cid-tpGCsoSQBE .item-subtitle {
+  text-align: center;
+}
+.cid-tqiSnyIWTs {
+  padding-top: 1rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-tqiSnyIWTs img,
+.cid-tqiSnyIWTs .item-img {
+  width: 100%;
+}
+.cid-tqiSnyIWTs .item:focus,
+.cid-tqiSnyIWTs span:focus {
+  outline: none;
+}
+.cid-tqiSnyIWTs .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-tqiSnyIWTs .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #fafafa;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-tqiSnyIWTs .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tqiSnyIWTs .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-tqiSnyIWTs .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-tqiSnyIWTs .mbr-section-title {
+  color: #232323;
+}
+.cid-tqiSnyIWTs .mbr-text,
+.cid-tqiSnyIWTs .mbr-section-btn {
+  text-align: left;
+}
+.cid-tqiSnyIWTs .item-title {
+  text-align: center;
+}
+.cid-tqiSnyIWTs .item-subtitle {
+  text-align: center;
+}
+.cid-tqiSnRcWxu {
+  padding-top: 1rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-tqiSnRcWxu img,
+.cid-tqiSnRcWxu .item-img {
+  width: 100%;
+}
+.cid-tqiSnRcWxu .item:focus,
+.cid-tqiSnRcWxu span:focus {
+  outline: none;
+}
+.cid-tqiSnRcWxu .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-tqiSnRcWxu .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #fafafa;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-tqiSnRcWxu .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tqiSnRcWxu .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-tqiSnRcWxu .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-tqiSnRcWxu .mbr-section-title {
+  color: #232323;
+}
+.cid-tqiSnRcWxu .mbr-text,
+.cid-tqiSnRcWxu .mbr-section-btn {
+  text-align: left;
+}
+.cid-tqiSnRcWxu .item-title {
+  text-align: center;
+}
+.cid-tqiSnRcWxu .item-subtitle {
+  text-align: center;
+}
+.cid-tqiSoMhtlc {
+  padding-top: 1rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-tqiSoMhtlc img,
+.cid-tqiSoMhtlc .item-img {
+  width: 100%;
+}
+.cid-tqiSoMhtlc .item:focus,
+.cid-tqiSoMhtlc span:focus {
+  outline: none;
+}
+.cid-tqiSoMhtlc .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-tqiSoMhtlc .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #fafafa;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-tqiSoMhtlc .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tqiSoMhtlc .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-tqiSoMhtlc .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-tqiSoMhtlc .mbr-section-title {
+  color: #232323;
+}
+.cid-tqiSoMhtlc .mbr-text,
+.cid-tqiSoMhtlc .mbr-section-btn {
+  text-align: left;
+}
+.cid-tqiSoMhtlc .item-title {
+  text-align: center;
+}
+.cid-tqiSoMhtlc .item-subtitle {
+  text-align: center;
+}
+.cid-tqiSq5nATT {
+  padding-top: 1rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-tqiSq5nATT img,
+.cid-tqiSq5nATT .item-img {
+  width: 100%;
+}
+.cid-tqiSq5nATT .item:focus,
+.cid-tqiSq5nATT span:focus {
+  outline: none;
+}
+.cid-tqiSq5nATT .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-tqiSq5nATT .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #fafafa;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-tqiSq5nATT .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tqiSq5nATT .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-tqiSq5nATT .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-tqiSq5nATT .mbr-section-title {
+  color: #232323;
+}
+.cid-tqiSq5nATT .mbr-text,
+.cid-tqiSq5nATT .mbr-section-btn {
+  text-align: left;
+}
+.cid-tqiSq5nATT .item-title {
+  text-align: center;
+}
+.cid-tqiSq5nATT .item-subtitle {
   text-align: center;
 }
 .cid-tpIQFhcaS1 {
