create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -10436,6 +10436,108 @@ a {
 .cid-tpGDiHytD8 .item-subtitle {
   text-align: center;
 }
+.cid-tqmFzr2sDI {
+  padding-top: 1rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-tqmFzr2sDI img,
+.cid-tqmFzr2sDI .item-img {
+  width: 100%;
+}
+.cid-tqmFzr2sDI .item:focus,
+.cid-tqmFzr2sDI span:focus {
+  outline: none;
+}
+.cid-tqmFzr2sDI .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-tqmFzr2sDI .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #fafafa;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-tqmFzr2sDI .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tqmFzr2sDI .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-tqmFzr2sDI .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-tqmFzr2sDI .mbr-section-title {
+  color: #232323;
+}
+.cid-tqmFzr2sDI .mbr-text,
+.cid-tqmFzr2sDI .mbr-section-btn {
+  text-align: left;
+}
+.cid-tqmFzr2sDI .item-title {
+  text-align: center;
+}
+.cid-tqmFzr2sDI .item-subtitle {
+  text-align: center;
+}
+.cid-tqmFAyw5GA {
+  padding-top: 1rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-tqmFAyw5GA img,
+.cid-tqmFAyw5GA .item-img {
+  width: 100%;
+}
+.cid-tqmFAyw5GA .item:focus,
+.cid-tqmFAyw5GA span:focus {
+  outline: none;
+}
+.cid-tqmFAyw5GA .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-tqmFAyw5GA .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #fafafa;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-tqmFAyw5GA .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tqmFAyw5GA .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-tqmFAyw5GA .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-tqmFAyw5GA .mbr-section-title {
+  color: #232323;
+}
+.cid-tqmFAyw5GA .mbr-text,
+.cid-tqmFAyw5GA .mbr-section-btn {
+  text-align: left;
+}
+.cid-tqmFAyw5GA .item-title {
+  text-align: center;
+}
+.cid-tqmFAyw5GA .item-subtitle {
+  text-align: center;
+}
 .cid-tpIQRqa8Fs {
   padding-top: 15px;
   padding-bottom: 0px;
@@ -11859,6 +11961,210 @@ a {
   text-align: center;
 }
 .cid-tpGE4bmJ24 .item-subtitle {
+  text-align: center;
+}
+.cid-tqp4Ftn9Gl {
+  padding-top: 1rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-tqp4Ftn9Gl img,
+.cid-tqp4Ftn9Gl .item-img {
+  width: 100%;
+}
+.cid-tqp4Ftn9Gl .item:focus,
+.cid-tqp4Ftn9Gl span:focus {
+  outline: none;
+}
+.cid-tqp4Ftn9Gl .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-tqp4Ftn9Gl .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #fafafa;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-tqp4Ftn9Gl .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tqp4Ftn9Gl .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-tqp4Ftn9Gl .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-tqp4Ftn9Gl .mbr-section-title {
+  color: #232323;
+}
+.cid-tqp4Ftn9Gl .mbr-text,
+.cid-tqp4Ftn9Gl .mbr-section-btn {
+  text-align: left;
+}
+.cid-tqp4Ftn9Gl .item-title {
+  text-align: center;
+}
+.cid-tqp4Ftn9Gl .item-subtitle {
+  text-align: center;
+}
+.cid-tqp4FITGoy {
+  padding-top: 1rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-tqp4FITGoy img,
+.cid-tqp4FITGoy .item-img {
+  width: 100%;
+}
+.cid-tqp4FITGoy .item:focus,
+.cid-tqp4FITGoy span:focus {
+  outline: none;
+}
+.cid-tqp4FITGoy .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-tqp4FITGoy .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #fafafa;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-tqp4FITGoy .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tqp4FITGoy .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-tqp4FITGoy .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-tqp4FITGoy .mbr-section-title {
+  color: #232323;
+}
+.cid-tqp4FITGoy .mbr-text,
+.cid-tqp4FITGoy .mbr-section-btn {
+  text-align: left;
+}
+.cid-tqp4FITGoy .item-title {
+  text-align: center;
+}
+.cid-tqp4FITGoy .item-subtitle {
+  text-align: center;
+}
+.cid-tqp4FWudWS {
+  padding-top: 1rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-tqp4FWudWS img,
+.cid-tqp4FWudWS .item-img {
+  width: 100%;
+}
+.cid-tqp4FWudWS .item:focus,
+.cid-tqp4FWudWS span:focus {
+  outline: none;
+}
+.cid-tqp4FWudWS .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-tqp4FWudWS .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #fafafa;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-tqp4FWudWS .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tqp4FWudWS .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-tqp4FWudWS .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-tqp4FWudWS .mbr-section-title {
+  color: #232323;
+}
+.cid-tqp4FWudWS .mbr-text,
+.cid-tqp4FWudWS .mbr-section-btn {
+  text-align: left;
+}
+.cid-tqp4FWudWS .item-title {
+  text-align: center;
+}
+.cid-tqp4FWudWS .item-subtitle {
+  text-align: center;
+}
+.cid-tqp4GPPjf6 {
+  padding-top: 1rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-tqp4GPPjf6 img,
+.cid-tqp4GPPjf6 .item-img {
+  width: 100%;
+}
+.cid-tqp4GPPjf6 .item:focus,
+.cid-tqp4GPPjf6 span:focus {
+  outline: none;
+}
+.cid-tqp4GPPjf6 .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-tqp4GPPjf6 .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #fafafa;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-tqp4GPPjf6 .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tqp4GPPjf6 .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-tqp4GPPjf6 .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-tqp4GPPjf6 .mbr-section-title {
+  color: #232323;
+}
+.cid-tqp4GPPjf6 .mbr-text,
+.cid-tqp4GPPjf6 .mbr-section-btn {
+  text-align: left;
+}
+.cid-tqp4GPPjf6 .item-title {
+  text-align: center;
+}
+.cid-tqp4GPPjf6 .item-subtitle {
   text-align: center;
 }
 .cid-tpIR36kcPd {
@@ -16236,6 +16542,108 @@ a {
   text-align: center;
 }
 .cid-tpGEYvOk0a .item-subtitle {
+  text-align: center;
+}
+.cid-tqp9NOcLPU {
+  padding-top: 1rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-tqp9NOcLPU img,
+.cid-tqp9NOcLPU .item-img {
+  width: 100%;
+}
+.cid-tqp9NOcLPU .item:focus,
+.cid-tqp9NOcLPU span:focus {
+  outline: none;
+}
+.cid-tqp9NOcLPU .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-tqp9NOcLPU .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #fafafa;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-tqp9NOcLPU .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tqp9NOcLPU .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-tqp9NOcLPU .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-tqp9NOcLPU .mbr-section-title {
+  color: #232323;
+}
+.cid-tqp9NOcLPU .mbr-text,
+.cid-tqp9NOcLPU .mbr-section-btn {
+  text-align: left;
+}
+.cid-tqp9NOcLPU .item-title {
+  text-align: center;
+}
+.cid-tqp9NOcLPU .item-subtitle {
+  text-align: center;
+}
+.cid-tqp9OaupZU {
+  padding-top: 1rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-tqp9OaupZU img,
+.cid-tqp9OaupZU .item-img {
+  width: 100%;
+}
+.cid-tqp9OaupZU .item:focus,
+.cid-tqp9OaupZU span:focus {
+  outline: none;
+}
+.cid-tqp9OaupZU .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-tqp9OaupZU .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #fafafa;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-tqp9OaupZU .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tqp9OaupZU .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-tqp9OaupZU .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-tqp9OaupZU .mbr-section-title {
+  color: #232323;
+}
+.cid-tqp9OaupZU .mbr-text,
+.cid-tqp9OaupZU .mbr-section-btn {
+  text-align: left;
+}
+.cid-tqp9OaupZU .item-title {
+  text-align: center;
+}
+.cid-tqp9OaupZU .item-subtitle {
   text-align: center;
 }
 .cid-tpIRvQ59ap {
